--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,10 @@
+.flexBlock {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+}
+
 .header {
   h1 {
     font-size: 2em;
@@ -28,9 +35,9 @@
 .resetBtn {
   background-color: rgb(220, 96, 46);
   margin-top: 15px;
-  margin-left: 15px;
+  cursor: pointer;
   color: white;
-  height: 60px;
+  height: 30px;
   width: 60px;
   background-color: #dc602e;
   display: flex;
@@ -39,4 +46,5 @@
   border-radius: 10px;
   font-weight: bold;
   border: none;
+  margin-left: 15px;
 }
