--- a/src/components/LeftButton/LeftButton.module.scss
+++ b/src/components/LeftButton/LeftButton.module.scss
@@ -60,3 +60,28 @@
 span {
   font-size: 14px;
 }
+.inputz {
+  display: flex;
+  button {
+    background-color: rgb(5, 168, 170);
+    color: white;
+    border-radius: 8px;
+    border: none;
+  }
+  input {
+    border-radius: 10px;
+  }
+}
+
+.inputz2  {
+  display: flex;
+  button {
+    background-color: rgb(220, 96, 46);
+    color: white;
+    border-radius: 8px;
+    border: none;
+  }
+  input {
+    border-radius: 10px;
+  }
+}
