--- a/src/components/RightButton/RightButton.module.scss
+++ b/src/components/RightButton/RightButton.module.scss
@@ -1,53 +1,79 @@
 .right {
-    padding-bottom: 12px;
-    background-color: rgb(184, 213, 184);
-    width: 170px;
-    border-radius: 10px;
-    height: 150px;
-    h3 {
-      color: whitesmoke;
-      padding: 5px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    p {
-      color: rgb(68, 68, 68);
-      text-align: left;
-      font-size: 17px;
-      padding-left: 10px;
-      font-weight: 700;
-    }
-    div {
-      border-radius: 7px;
-      background-color: rgb(5, 168, 170);
-      width: inherit;
-    }
+  padding-bottom: 12px;
+  background-color: rgb(184, 213, 184);
+  width: 170px;
+  border-radius: 10px;
+  height: 150px;
+  h3 {
+    color: whitesmoke;
+    padding: 5px;
+    margin: 0 auto;
+    text-align: center;
   }
-  
+  p {
+    color: rgb(68, 68, 68);
+    text-align: left;
+    font-size: 17px;
+    padding-left: 10px;
+    font-weight: 700;
+  }
+  div {
+    border-radius: 7px;
+    background-color: rgb(5, 168, 170);
+    width: inherit;
+  }
+}
 
-  .right2 {
-    padding-bottom: 12px;
-    background-color: rgb(220, 96, 46);
-    width: 170px;
-    border-radius: 10px;
-    height: 150px;
-    h3 {
-      color: whitesmoke;
-      padding: 5px;
-      margin: 0 auto;
-      text-align: center;
-    }
-    p {
-      color: rgb(68, 68, 68);
-      text-align: left;
-      font-size: 17px;
-      color: white;
-      padding-left: 10px;
-      font-weight: 700;
-    }
-    div {
-      border-radius: 7px;
-      background-color: rgb(188, 65, 43);
-      width: inherit;
-    }
+.right2 {
+  padding-bottom: 12px;
+  background-color: rgb(220, 96, 46);
+  width: 170px;
+  border-radius: 10px;
+  height: 150px;
+  h3 {
+    color: whitesmoke;
+    padding: 5px;
+    margin: 0 auto;
+    text-align: center;
   }
+  p {
+    color: rgb(68, 68, 68);
+    text-align: left;
+    font-size: 17px;
+    color: white;
+    padding-left: 10px;
+    font-weight: 700;
+  }
+  div {
+    border-radius: 7px;
+    background-color: rgb(188, 65, 43);
+    width: inherit;
+  }
+}
+
+.inputz {
+  display: flex;
+  button {
+    background-color: rgb(5, 168, 170);
+    color: white;
+    border-radius: 8px;
+    border: none;
+  }
+  input {
+    border-radius: 10px;
+  }
+}
+
+
+.inputz2  {
+  display: flex;
+  button {
+    background-color: rgb(220, 96, 46);
+    color: white;
+    border-radius: 8px;
+    border: none;
+  }
+  input {
+    border-radius: 10px;
+  }
+}
