--- a/src/components/ButtonInfo/Scroll/Scroll.module.scss
+++ b/src/components/ButtonInfo/Scroll/Scroll.module.scss
@@ -1,5 +1,4 @@
 .midClickWrapper {
- 
   padding-right: 20px;
   padding-left: 40px;
   border-radius: 12px;
@@ -12,6 +11,13 @@
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 510px) {
+    font-size: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+  }
   span {
     font-weight: 700;
     font-size: 17px;
@@ -38,6 +44,11 @@
     outline: none; /* Убираем обводку при фокусе */
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+    @media (max-width: 510px) {
+      font-size: 8px;
+      width: 20px;
+      border-radius: 1px;
+    }
   }
   margin-bottom: 25px;
 }
