--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -8,24 +8,55 @@
   margin-bottom: 30px;
   background-color: #fff; /* Цвет фона вашего блока */
   border-radius: 8px; /* Если нужен скругленный угол */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Параметры тени */
+  box-shadow: 0 4px 8px rgba(1, 0, 0, .4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  @media (max-width: 510px) {
+  @media (max-width: 728px) {
     font-size: 10px;
-    padding-left:5px;
+    padding-left: 5px;
+    height: 150px;
     padding-right: 5px;
     padding-right: 5px;
     border-radius: 5px;
-   }
+  }
   span {
     font-weight: 700;
     font-size: 17px;
   }
 }
+
+
+.rightClickWrapper2 {
+  color: white;
+  background-color: rgb(216, 148, 121);
+  padding-left: 40px; padding-right: 20px;
+  border-radius: 12px;
+  flex: 1; /* Равномерное распределение пространства между элементами */
+  text-align: left;
+  margin-left: 15px; /* Уменьшен отступ для более компактного вида */
+  margin-bottom: 30px;
+  border-radius: 8px; /* Если нужен скругленный угол */
+  box-shadow: 0 4px 8px rgba(1, 0, 0, .4); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 728px) {
+    font-size: 10px;
+    padding-left: 5px;
+    height: 150px;
+    padding-right: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+  }
+  span {
+    font-weight: 700;
+    font-size: 17px;
+  }
+}
+
+
+
 .inputz {
   display: flex;
   button {
-    max-width: 100px;
+    width: 100px;
     background-color: rgb(5, 168, 170);
     color: white;
     border-radius: 3px;
@@ -33,21 +64,22 @@
     border: none;
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+    @media (max-width: 559px) {
+      font-size: 8px;
+      width: 40px;
+      height: 20px;
+      border-radius: 1px;
+    }
   }
   input {
     border: 1px solid white;
     border-radius: 3px;
     width: 40px;
     height: 15px;
-    font-size: 12px;
+    font-size: 10px;
     outline: none; /* Убираем обводку при фокусе */
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-    @media (max-width: 510px) {
-      font-size: 8px;
-      width: 20px;
-      border-radius: 1px;
-    }
   }
   margin-bottom: 25px;
 }
@@ -55,6 +87,7 @@
 .inputz2 {
   display: flex;
   button {
+    width: 100px;
     margin-left: 5px;
     background-color: rgb(220, 96, 46);
     color: white;
@@ -62,6 +95,12 @@
     border: none;
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+    @media (max-width: 559px) {
+      font-size: 8px;
+      width: 40px;
+      height: 20px;
+      border-radius: 1px;
+    }
   }
   margin-bottom: 25px;
   input {
@@ -74,4 +113,42 @@
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
   }
+}
+input::placeholder {
+  color: #999; /* Цвет текста placeholder */
+  font-style: italic; /* Стиль шрифта (курсив, например) */
+  /* Другие стили, такие как размер шрифта, выравнивание и т.д. */
+}
+textarea::selection {
+  background-color: #3498db;
+  color: #fff;
+}
+
+.modal {
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 37%;
+  top: 43%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 10px;
+  border: 1px solid #888;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.modalContent {
 }
