--- a/src/components/ResetButton/ResetButton.module.scss
+++ b/src/components/ResetButton/ResetButton.module.scss
@@ -7,3 +7,13 @@
     height: auto;
     cursor: pointer;
   }
+
+  .resetButton2 {
+    position: absolute;
+    top: 40%;
+    left:50.3%;
+    transform: translate(-50%, -50%);
+    width: 7%; /* Пример ширины кнопки (установите подходящее значение) */
+    height: auto;
+    cursor: pointer;
+  }
