--- a/src/components/ButtonInfo/Left/Left.module.scss
+++ b/src/components/ButtonInfo/Left/Left.module.scss
@@ -63,10 +63,9 @@
   padding-right: 20px;
   border-radius: 12px;
   flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #fff; /* Цвет фона вашего блока */
+  background-color: #ffffffe5; /* Цвет фона вашего блока */
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
@@ -96,7 +95,7 @@
   background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #fff; /* Цвет фона вашего блока */
+  background-color: #f5f5f5; /* Цвет фона вашего блока */
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0  11px 11px rgba(255, 255, 255, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
