--- a/src/components/ResetButton/ResetButton.module.scss
+++ b/src/components/ResetButton/ResetButton.module.scss
@@ -16,4 +16,5 @@
     width: 7%; /* Пример ширины кнопки (установите подходящее значение) */
     height: auto;
     cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.705);
   }
