--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -69,7 +69,7 @@
   background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #fff; /* Цвет фона вашего блока */
+  background-color: #ffffffe5; /* Цвет фона вашего блока */
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
@@ -100,7 +100,7 @@
   background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #fff; /* Цвет фона вашего блока */
+  background-color: #f5f5f5; /* Цвет фона вашего блока */
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0  11px 11px rgba(255, 255, 255, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
