--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -5,10 +5,9 @@
   padding-right: 20px;
   border-radius: 12px;
   flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #fff; /* Цвет фона вашего блока */
+  background-color: white;
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
@@ -36,7 +35,6 @@
   border-radius: 12px;
   margin-left: 20px;
   flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: beige;
   text-align: left;
   margin-bottom: 30px;
   background-color: rgb(255, 137, 91);
@@ -69,7 +67,7 @@
   background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: #ffffffe5; /* Цвет фона вашего блока */
+  background-color: white;
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
