--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -128,7 +128,6 @@
     border: 1px solid white;
     border-radius: 3px;
     width: 40px;
-    height: 15px;
     font-size: 10px;
     outline: none; /* Убираем обводку при фокусе */
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
@@ -146,7 +145,6 @@
     border: 1px solid white;
     border-radius: 3px;
     width: 40px;
-    height: 15px;
     font-size: 10px;
     box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
     transition: box-shadow 0.3s ease; /* Анимация изменения тени */
@@ -190,7 +188,7 @@ textarea::selection {
 
 .addButton {
   width: 100px;
-  background-color: rgb(5, 168, 170);
+  background-color: rgba(0, 0, 0, 0.671);
   color: white;
   border-radius: 3px;
   margin-left: 5px;
@@ -200,11 +198,9 @@ textarea::selection {
   @media (max-width: 559px) {
     font-size: 8px;
     width: 40px;
-    height: 20px;
-    border-radius: 1px;
+    border-radius: 5px;
   }
 }
-
 .addButton2 {
   width: 100px;
   margin-left: 5px;
@@ -217,8 +213,7 @@ textarea::selection {
   @media (max-width: 559px) {
     font-size: 8px;
     width: 40px;
-    height: 20px;
-    border-radius: 1px;
+    border-radius: 5px;
   }
 }
 
@@ -233,5 +228,5 @@ textarea::selection {
 .closeTag {
   display: inline-block;
   cursor: pointer;
-  margin-top: 3px;
+  margin-top: 5px;
 }
