--- a/src/components/ButtonInfo/Right/Right.module.scss
+++ b/src/components/ButtonInfo/Right/Right.module.scss
@@ -63,11 +63,12 @@
   margin-left: 20px;
   padding-right: 20px;
   border-radius: 12px;
+  color:white;
   flex: 1; /* Равномерное распределение пространства между элементами */
   background-color: beige;
   text-align: left;
   margin-bottom: 30px;
-  background-color: white;
+  background-color: rgb(57,62,64);
   border-radius: 8px; /* Если нужен скругленный угол */
   box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
   transition: box-shadow 0.3s ease; /* Анимация изменения тени */
@@ -166,6 +167,7 @@ textarea::selection {
   display: block;
   position: fixed;
   z-index: 1;
+  color: black;
   left: 37%;
   top: 43%;
   transform: translate(-50%, -50%);
@@ -201,6 +203,7 @@ textarea::selection {
     border-radius: 5px;
   }
 }
+
 .addButton2 {
   width: 100px;
   margin-left: 5px;
@@ -217,6 +220,44 @@ textarea::selection {
   }
 }
 
+
+.addButton3 {
+  width: 100px;
+  margin-left: 5px;
+  background-color: rgba(0, 0, 0, 0.671);
+  color: white;
+  border-radius: 3px;
+  border: none;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 559px) {
+    font-size: 8px;
+    width: 40px;
+    border-radius: 5px;
+  }
+}
+
+
+
+.addButton4 {
+  width: 100px;
+  margin-left: 5px;
+  background-color: rgba(255, 255, 255, 0.897);
+  color: black;
+  border-radius: 3px;
+  border: none;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 559px) {
+    font-size: 8px;
+    width: 40px;
+    border-radius: 5px;
+  }
+}
+
+
+
+
 .red2 {
   color: white;
 }
@@ -224,9 +265,9 @@ textarea::selection {
 .red {
   color: black;
 }
-
 .closeTag {
   display: inline-block;
   cursor: pointer;
   margin-top: 5px;
 }
+
