--- a/src/components/ButtonInfo/Scroll/Scroll.module.scss
+++ b/src/components/ButtonInfo/Scroll/Scroll.module.scss
@@ -63,8 +63,9 @@
   padding-right: 20px;
   margin-left: 20px;
   border-radius: 12px;
+  color:white;
   flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: white;
+  background-color: rgb(57,62,64);
   text-align: left;
   margin-bottom: 30px;
   border-radius: 8px; /* Если нужен скругленный угол */
@@ -161,6 +162,7 @@ textarea::selection {
   display: block;
   position: fixed;
   z-index: 1;
+  color: black;
   left: 37%;
   top: 43%;
   transform: translate(-50%, -50%);
@@ -213,6 +215,44 @@ textarea::selection {
   }
 }
 
+
+.addButton3 {
+  width: 100px;
+  margin-left: 5px;
+  background-color: rgba(0, 0, 0, 0.671);
+  color: white;
+  border-radius: 3px;
+  border: none;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 559px) {
+    font-size: 8px;
+    width: 40px;
+    border-radius: 5px;
+  }
+}
+
+
+
+.addButton4 {
+  width: 100px;
+  margin-left: 5px;
+  background-color: rgba(255, 255, 255, 0.897);
+  color: black;
+  border-radius: 3px;
+  border: none;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
+  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+  @media (max-width: 559px) {
+    font-size: 8px;
+    width: 40px;
+    border-radius: 5px;
+  }
+}
+
+
+
+
 .red2 {
   color: white;
 }
@@ -220,9 +260,9 @@ textarea::selection {
 .red {
   color: black;
 }
-
 .closeTag {
   display: inline-block;
   cursor: pointer;
   margin-top: 5px;
 }
+
