--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -8,7 +8,6 @@
   flex-direction: row;
 }
 
-
 .mouseBody {
   width: 40vw;
   height: auto;
@@ -35,11 +34,114 @@ button {
 }
 
 .textBlack {
+  z-index: 255;
+  margin-top: 2px;
+  margin-left: -25px;
+  position: absolute;
+  position: absolute;
   color: black;
-  background-color: rgba(255, 255, 255, 0.959);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .textWhite {
+  margin-top: 2px;
+  z-index: 255;
+  margin-left: -25px;
+  position: absolute;
   color: white;
-  background-color:rgba(0, 0, 0, 0.884);
+  background-color: rgb(37, 37, 37);
+}
+
+.arrow {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+
+.arrow::before,
+.arrow::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+}
+
+.arrow::before {
+  left: 0;
+  border-right-color: rgb(255, 255, 255); /* Используйте желаемый цвет */
+  animation: moveRight 1s infinite alternate, blink 1s infinite;
+}
+
+.arrow::after {
+  right: 0;
+  border-left-color: rgb(255, 253, 253); /* Используйте желаемый цвет */
+  animation: moveLeft 1s infinite alternate, blink 1s infinite;
+}
+
+@keyframes moveRight {
+  to {
+    left: 55px; /* Расстояние, на которое стрелочка двигается вправо */
+  }
+}
+
+@keyframes moveLeft {
+  to {
+    right: 55px; /* Расстояние, на которое стрелочка двигается влево */
+  }
+}
+
+@keyframes blink {
+  to {
+    opacity: 0;
+  }
+}
+
+.arrow2 {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+
+.arrow2::before,
+.arrow2::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  width: 0;
+  height: 0;
+  border: 6px solid transparent;
+}
+
+.arrow2::before {
+  left: 0;
+  border-right-color: black; /* Используйте желаемый цвет */
+  animation: moveRight 1s infinite alternate, blink 1s infinite;
+}
+
+.arrow2::after {
+  right: 0;
+  border-left-color: black; /* Используйте желаемый цвет */
+  animation: moveLeft 1s infinite alternate, blink 1s infinite;
+}
+
+@keyframes moveRight {
+  to {
+    left: 55px; /* Расстояние, на которое стрелочка двигается вправо */
+  }
+}
+
+@keyframes moveLeft {
+  to {
+    right: 55px; /* Расстояние, на которое стрелочка двигается влево */
+  }
+}
+
+@keyframes blink {
+  to {
+    opacity: 0;
+  }
 }
