--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,4 +1,6 @@
 .wrapper {
+  text-align: center;
+  align-items: center;
   margin: 0 auto;
   text-align: center;
 }
@@ -21,24 +23,18 @@
   color: black;
 }
 button {
-  width: 55px;
+  width: 65px;
   height: 25px;
   background-color: rgb(185, 185, 185);
   color: white;
   border-radius: 3px;
-  margin-left: 5px;
   border: none;
-  box-shadow: 1 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.5s ease; /* Анимация изменения тени */
   cursor: pointer;
 }
 
 .textBlack {
   z-index: 255;
   margin-top: 2px;
-  margin-left: -25px;
-  position: absolute;
-  position: absolute;
   color: black;
   background-color: rgba(255, 255, 255, 1);
 }
@@ -46,102 +42,33 @@ button {
 .textWhite {
   margin-top: 2px;
   z-index: 255;
-  margin-left: -25px;
-  position: absolute;
+  font-size: 13px;
   color: white;
   background-color: rgb(37, 37, 37);
 }
 
-.arrow {
-  position: relative;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
+.btnOfLang {
+  margin: 0 auto;
+  cursor: pointer;
+  font-size: 10px;
+  background-color: gray;
+  width: 60px;
+  border-radius: 5px;
+  color: white;
+  font-weight: 700;
+  padding: 5px;
+  background-color: rgb(57, 62, 64);
 }
 
-.arrow::before,
-.arrow::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-}
-
-.arrow::before {
-  left: 0;
-  border-right-color: rgb(255, 255, 255); /* Используйте желаемый цвет */
-  animation: moveRight 1s infinite alternate, blink 1s infinite;
-}
-
-.arrow::after {
-  right: 0;
-  border-left-color: rgb(255, 253, 253); /* Используйте желаемый цвет */
-  animation: moveLeft 1s infinite alternate, blink 1s infinite;
-}
-
-@keyframes moveRight {
-  to {
-    left: 55px; /* Расстояние, на которое стрелочка двигается вправо */
-  }
-}
-
-@keyframes moveLeft {
-  to {
-    right: 55px; /* Расстояние, на которое стрелочка двигается влево */
-  }
-}
-
-@keyframes blink {
-  to {
-    opacity: 0;
-  }
-}
-
-.arrow2 {
-  position: relative;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-}
-
-.arrow2::before,
-.arrow2::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-}
-
-.arrow2::before {
-  left: 0;
-  border-right-color: black; /* Используйте желаемый цвет */
-  animation: moveRight 1s infinite alternate, blink 1s infinite;
-}
-
-.arrow2::after {
-  right: 0;
-  border-left-color: black; /* Используйте желаемый цвет */
-  animation: moveLeft 1s infinite alternate, blink 1s infinite;
-}
-
-@keyframes moveRight {
-  to {
-    left: 55px; /* Расстояние, на которое стрелочка двигается вправо */
-  }
-}
-
-@keyframes moveLeft {
-  to {
-    right: 55px; /* Расстояние, на которое стрелочка двигается влево */
-  }
-}
-
-@keyframes blink {
-  to {
-    opacity: 0;
-  }
+.btnOfLang2 {
+  margin: 0 auto;
+  cursor: pointer;
+  font-size: 10px;
+  background-color: gray;
+  width: 60px;
+  border-radius: 5px;
+  color: black;
+  font-weight: 700;
+  padding: 5px;
+  background-color: white;
 }
