--- a/src/components/ButtonInfo/Left/Left.module.scss
+++ b/src/components/ButtonInfo/Left/Left.module.scss
@@ -1,248 +1,115 @@
-.leftClickWrapper {
-  padding-left: 30px;
-  padding-right: 15px;
-  padding-right: 20px;
-  border-radius: 12px;
-  flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: beige;
-  text-align: left;
-  margin-bottom: 30px;
-  background-color: white;
-  border-radius: 8px; /* Если нужен скругленный угол */
-  box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+.container {
+  min-width: 13vw;
+  padding: 0 0 0 10px;
+  height: auto;
+}
 
-  @media (max-width: 728px) {
-    font-size: 10px;
-    padding-left: 5px;
-    height: 150px;
-    padding-right: 5px;
-    padding-right: 5px;
-    border-radius: 5px;
-  }
+@mixin fluid-text($min: 5, $max: 35) {
+  font-size: clamp(#{$min}px, #{$max / 1920 * 100}vw, #{$max}px);
+}
+@mixin click-wrapper {
+  padding: 1px 10px 1px 10px;
+  border-radius: 12px;
+  flex: 1;
+  text-align: left;
+  color: white;
+  margin-bottom: 30px;
+  transition: box-shadow 0.3s ease;
 
   span {
     font-weight: 700;
     font-size: 17px;
   }
-}
-
-.leftClickWrapper2 {
-  padding-left: 30px;
-  padding-right: 15px;
-  padding-right: 20px;
-  border-radius: 12px;
-  flex: 1; /* Равномерное распределение пространства между элементами */
-  text-align: left;
-  color: white;
-  margin-bottom: 30px;
-  background-color: rgb(90, 19, 2);
-  border-radius: 8px; /* Если нужен скругленный угол */
-  box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-
-  @media (max-width: 728px) {
-    font-size: 10px;
-    padding-left: 5px;
-    height: 150px;
-    padding-right: 5px;
-    padding-right: 5px;
-    border-radius: 5px;
-  }
-
-  span {
-    font-weight: 700;
-    font-size: 17px;
+  h4 {
+    margin-left: 0px;
+    @include fluid-text(12, 18);
   }
 }
 
-.leftClickWrapper3 {
-  padding-left: 30px;
-  padding-right: 15px;
-  padding-right: 20px;
-  border-radius: 12px;
-  flex: 1; /* Равномерное распределение пространства между элементами */
-  text-align: left;
-  color: white;
-  margin-bottom: 30px;
+@mixin add-button {
+  overflow: hidden;
+  border-radius: 3px;
+  margin-left: 5px;
+  border: none;
+  width: 120px;
+  @include fluid-text(5, 15);
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease;
+}
+@mixin input-styles {
+  display: flex;
+  margin-bottom: 25px;
+
+  input {
+    @include fluid-text(8, 12);
+    outline: none;
+    border: 1px solid white;
+    border-radius: 3px;
+    width: 40px;
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.3s ease;
+  }
+  input::placeholder {
+    color: #999;
+    font-style: italic;
+    @include fluid-text(8, 10);
+  }
+}
+
+.leftWDef {
+  @include click-wrapper;
+  box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4);
   background-color: rgb(57, 62, 64);
-  border-radius: 8px; /* Если нужен скругленный угол */
-  box-shadow: 0 4px 8px rgba(1, 0, 0, 0.4); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-
-  @media (max-width: 728px) {
-    font-size: 10px;
-    padding-left: 5px;
-    height: 150px;
-    padding-right: 5px;
-    padding-right: 5px;
-    border-radius: 5px;
-  }
-
-  span {
-    font-weight: 700;
-    font-size: 17px;
-  }
 }
 
-.leftClickWrapper4 {
-  padding-left: 30px;
-  padding-right: 15px;
-  padding-right: 20px;
-  border-radius: 12px;
-  flex: 1; /* Равномерное распределение пространства между элементами */
-  background-color: beige;
-  text-align: left;
-  margin-bottom: 30px;
-  background-color: #f5f5f5; /* Цвет фона вашего блока */
-  border-radius: 8px; /* Если нужен скругленный угол */
-  box-shadow: 0 11px 11px rgba(255, 255, 255, 0.4); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
+.leftWRed {
+  @include click-wrapper;
+  background-color: rgb(90, 19, 2);
+}
 
-  @media (max-width: 728px) {
-    font-size: 10px;
-    padding-left: 5px;
-    height: 150px;
-    padding-right: 5px;
-    padding-right: 5px;
-    border-radius: 5px;
-  }
+.leftWWhite {
+  @include click-wrapper;
+  background-color: rgb(57, 62, 64);
+}
 
-  span {
-    font-weight: 700;
-    font-size: 17px;
-  }
+.leftWWhite2 {
+  @include click-wrapper;
+  background-color: #f5f5f5;
+  color: black;
+  box-shadow: 0 11px 11px rgba(255, 255, 255, 0.4);
 }
 
 .inputz {
-  display: flex;
-
-  input {
-    border: 1px solid white;
-    border-radius: 3px;
-    width: 40px;
-    font-size: 10px;
-    outline: none; /* Убираем обводку при фокусе */
-    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-    transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  }
-  margin-bottom: 25px;
+  @include input-styles;
+  height: 25px;
 }
 
 .inputz2 {
-  display: flex;
-
-  margin-bottom: 25px;
-  input {
-    outline: none; /* Убираем обводку при фокусе */
-    border: 1px solid white;
-    border-radius: 3px;
-    width: 40px;
-    font-size: 10px;
-    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-    transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  }
-}
-input::placeholder {
-  color: #999; /* Цвет текста placeholder */
-  font-style: italic; /* Стиль шрифта (курсив, например) */
-  /* Другие стили, такие как размер шрифта, выравнивание и т.д. */
-}
-textarea::selection {
-  background-color: #3498db;
-  color: #fff;
-}
-
-.modal {
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  display: block;
-  position: fixed;
-  z-index: 1;
-  color: black;
-  left: 37%;
-  top: 43%;
-  transform: translate(-50%, -50%);
-  background-color: #fefefe;
-  padding: 20px;
-  border-radius: 20px;
-  font-size: 12px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.5); /* Параметры тени */
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+  @include input-styles;
 }
 
 .addButton {
-  width: 100px;
+  @include add-button;
   background-color: rgba(0, 0, 0, 0.671);
   color: white;
-  border-radius: 3px;
-  margin-left: 5px;
-  border: none;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  @media (max-width: 559px) {
-    font-size: 12px;
-    width: 80px;
-    border-radius: 5px;
-  }
 }
 
 .addButton2 {
-  width: 100px;
-  margin-left: 5px;
+  @include add-button;
   background-color: rgba(194, 0, 0, 0.712);
   color: white;
-  border-radius: 3px;
-  border: none;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  @media (max-width: 559px) {
-    font-size: 12px;
-    width: 80px;
-    border-radius: 5px;
-  }
 }
 
 .addButton3 {
-  width: 100px;
-  margin-left: 5px;
+  @include add-button;
   background-color: rgba(0, 0, 0, 0.671);
   color: white;
-  border-radius: 3px;
-  border: none;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  @media (max-width: 559px) {
-    font-size: 12px;
-    width: 80px;
-    border-radius: 5px;
-  }
 }
 
 .addButton4 {
-  width: 100px;
-  margin-left: 5px;
+  @include add-button;
   background-color: rgba(255, 255, 255, 0.897);
   color: black;
-  border-radius: 3px;
-  border: none;
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3); /* Параметры тени */
-  transition: box-shadow 0.3s ease; /* Анимация изменения тени */
-  @media (max-width: 559px) {
-    font-size: 12px;
-    width: 80px;
-    border-radius: 5px;
-  }
 }
 
 .red2 {
@@ -258,3 +125,29 @@ textarea::selection {
   margin-top: 5px;
 }
 
+.modal {
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.3s ease;
+  display: block;
+  position: fixed;
+  z-index: 1;
+  color: black;
+  left: 37%;
+  top: 43%;
+  transform: translate(-50%, -50%);
+  background-color: #fefefe;
+  padding: 20px;
+  border-radius: 5px;
+  font-size: 12px;
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
