--- a/src/components/MouseBody/MouseBody.module.scss
+++ b/src/components/MouseBody/MouseBody.module.scss
@@ -2,7 +2,9 @@
   position: relative;
   display: inline-block;
   max-width: 210px;
-  height: auto;  margin-bottom: 15px;
+  height: auto;
+  margin-bottom: 15px;
+
   .mouse {
     width: 100%;
     height: auto;
