--- a/src/components/ButtonInfo/Left/Left.module.scss
+++ b/src/components/ButtonInfo/Left/Left.module.scss
@@ -128,19 +128,20 @@
 .modal {
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
   transition: box-shadow 0.3s ease;
-  display: block;
-  position: fixed;
+  display: inline-flex;
+  position: absolute;
   z-index: 1;
   color: black;
-  left: 40%;
-  top: 50%;
+  margin-top: 80px;
+  margin-left: 100px;
   transform: translate(-50%, -50%);
   background-color: #fefefe;
-  padding: 20px;
+  padding: 15px;
   border-radius: 5px;
   font-size: 12px;
   box-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
   animation: fadeIn 0.5s ease-in-out;
+ 
 }
 
 @keyframes fadeIn {
