--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 /**
@@ -9,7 +9,7 @@
  у которых есть атрибут class
 */
 :where(ul, ol):where([class]) {
-  padding-left: 0;
+   padding-left: 0;
 }
 
 /**
@@ -18,7 +18,7 @@
 */
 body,
 :where(blockquote, figure):where([class]) {
-  margin: 0;
+   margin: 0;
 }
 
 /**
@@ -26,17 +26,17 @@ body,
  у которых есть атрибут class
 */
 :where(h1, h2, h3, h4, h5, h6, p, ul, ol, dl):where([class]) {
-  margin-block: 0;
+   margin-block: 0;
 }
 
 :where(dd[class]) {
-  margin-left: 0;
+   margin-left: 0;
 }
 
 :where(fieldset[class]) {
-  margin-left: 0;
-  padding: 0;
-  border: none;
+   margin-left: 0;
+   padding: 0;
+   border: none;
 }
 
 /**
@@ -44,7 +44,7 @@ body,
  у которого есть атрибут class
 */
 :where(ul[class]) {
-  list-style: none;
+   list-style: none;
 }
 
 /**
@@ -53,9 +53,9 @@ body,
  чтобы избежать взаимодействие с более сложным селектором
 */
 p {
-  --paragraphMarginBottom: 24px;
+   --paragraphMarginBottom: 24px;
 
-  margin-block: 0;
+   margin-block: 0;
 }
 
 /**
@@ -63,15 +63,15 @@ p {
  который расположен не последним среди своих соседних элементов
 */
 p:where(:not([class]):not(:last-child)) {
-  margin-bottom: var(--paragraphMarginBottom);
+   margin-bottom: var(--paragraphMarginBottom);
 }
 
 /**
  Упрощаем работу с изображениями
 */
 img {
-  display: block;
-  max-width: 100%;
+   display: block;
+   max-width: 100%;
 }
 
 /**
@@ -81,49 +81,49 @@ input,
 textarea,
 select,
 button {
-  font: inherit;
+   font: inherit;
 }
 
 html {
-  /**
+   /**
    Пригодится в большинстве ситуаций
    (когда, например, нужно будет "прижать" футер к низу сайта)
   */
-  height: 100%;
-  /**
+   height: 100%;
+   /**
    Плавный скролл
   */
-  scroll-behavior: smooth;
+   scroll-behavior: smooth;
 }
 
 body {
-  margin-top: 20px;
-  /**
+   margin-top: 20px;
+   /**
    Пригодится в большинстве ситуаций
    (когда, например, нужно будет "прижать" футер к низу сайта)
   */
-  min-height: 100%;
-  /**
+   min-height: 100%;
+   /**
    Унифицированный интерлиньяж
   */
-  line-height: 1.5;
+   line-height: 1.5;
 }
 
 /**
  Приводим к единому цвету svg-элементы
 */
 svg *[fill] {
-  fill: currentColor;
+   fill: currentColor;
 }
 svg *[stroke] {
-  stroke: currentColor;
+   stroke: currentColor;
 }
 
 /**
  Чиним баг задержки смены цвета при взаимодействии с svg-элементами
 */
 svg * {
-  transition-property: fill, stroke;
+   transition-property: fill, stroke;
 }
 
 /**
@@ -131,35 +131,35 @@ svg * {
  которые предпочитают их не использовать
 */
 @media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+   * {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+   }
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  background-color: var(--color-light-gray);
+   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+      'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+      'Helvetica Neue', sans-serif;
+   background-color: var(--color-light-gray);
 }
 
 :root {
-  --color-gray-light: rgba(255, 255, 255, 0.4);
-  --color-dark: rgb(57, 62, 64);
-  --color-light: white;
-  --color-light-gray: rgba(255, 255, 255, 0.897);
-  --color-red: rgb(90, 19, 2);
-  --border-radius: 5px;
+   --color-gray-light: rgba(255, 255, 255, 0.4);
+   --color-dark: rgb(57, 62, 64);
+   --color-light: white;
+   --color-light-gray: rgba(255, 255, 255, 0.897);
+   --color-red: rgb(90, 19, 2);
+   --border-radius: 5px;
 
-  --container-width: 1300px;
-  --container-padding-x: 15px;
+   --container-width: 1300px;
+   --container-padding-x: 15px;
 }
 
 .container {
-  max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
-  margin-inline: auto;
-  padding-inline: var(--container-padding-x);
+   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+   margin-inline: auto;
+   padding-inline: var(--container-padding-x);
 }
